--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "element-ui": "^2.11.1",
     "js-md5": "^0.7.3",
+    "v-clipboard": "^2.2.2",
     "vue": "^2.3.3",
     "vue-awesome-swiper": "^3.1.3",
     "vue-cookie": "^1.1.4",
