--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "element-ui": "^2.11.1",
     "js-md5": "^0.7.3",
-    "v-clipboard": "^2.2.2",
     "vue": "^2.3.3",
     "vue-awesome-swiper": "^3.1.3",
     "vue-cookie": "^1.1.4",
@@ -62,6 +61,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
+    "vue-clipboard2": "^0.3.1",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
