--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "element-china-area-data": "^4.1.2",
     "element-ui": "^2.11.1",
     "js-md5": "^0.7.3",
     "vue": "^2.3.3",
